fix: Adjust sidebar button dimensions and wrap HELP button in a link

--- a/static/Functions/style.css
+++ b/static/Functions/style.css
@@ -56,6 +56,8 @@ body {
 }
 
 .sidebar button {
+  width: 174;
+  height: 45;
   background: #181818;
   color: white;
   font-size: 18px;
